# clean-clipboard

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  direct_input.cpp  direct_input.hpp  direct_input_keyboard.cpp  direct_input_keyboard.hpp  errors.hpp  keys.cpp  keys.hpp  main.cpp  settings.cpp  settings.hpp  types.hpp
